package observer;

public interface ThayDoiTiGia {
    void nhanThongBao(float delta);

}
